--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "cross-env DEBUG=scb-openapi-oh-my-merchant-service:* nodemon --exec 'npm start'"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0",
-    "pug": "2.0.0-beta11"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
+    "http-errors": "^1.8.0",
+    "http-status-codes": "^1.4.0",
+    "morgan": "^1.10.0",
+    "safe-compare": "^1.1.4",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
