--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-basic-auth": "^1.2.0",
     "http-errors": "^1.8.0",
     "http-status-codes": "^1.4.0",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "safe-compare": "^1.1.4",
     "socket.io": "^2.3.0",
