--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=scb-openapi-oh-my-merchant-service:* nodemon --exec 'npm start'"
+    "dev": "cross-env DEBUG=scb-openapi-oh-my-merchant-service:* nodemon --exec 'npm start'",
+    "test": "jest --watchAll=true",
+    "test:coverage": "jest --collectCoverage"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -22,9 +24,12 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.16",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4"
   },
   "engines": {
-    "node": "12.16.2"
+    "node": ">=12.16.2"
   }
 }
