Fixes run test command
- Add test command for "test:watch"
- Edit test command for "test:coverage"
- Edit test command for "test"

Fixes #1

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./bin/www",
     "dev": "cross-env DEBUG=scb-openapi-oh-my-merchant-service:* nodemon --exec 'npm start'",
     "test": "jest --watchAll=true",
-    "test:coverage": "jest --collectCoverage"
+    "test:watch": "jest --watchAll=true",
+    "test:coverage": "jest --watchAll=false --collectCoverage"
   },
   "dependencies": {
     "axios": "^0.19.2",
