--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "cross-env DEBUG=scb-openapi-oh-my-merchant-service:* nodemon --exec 'npm start'",
-    "test": "jest --watchAll=true",
+    "test": "jest --watchAll=false",
     "test:watch": "jest --watchAll=true",
     "test:coverage": "jest --watchAll=false --collectCoverage"
   },
